@@ -3,4 +3,4 @@ MAINTAINERCLEANFILES = Makefile.in configure config/* aclocal.m4 \
 			INSTALL COPYING
 AUTOMAKE_OPTIONS = dist-bzip2 no-dist-gzip
 EXTRA_DIST = autogen.bash
-SUBDIRS = . ebuild_setup_pre ebuild_postrm_post
+SUBDIRS = . ebuild_setup_pre ebuild_postrm_post ebuild_fail
