@@ -1,9 +1,9 @@
-MAINTAINERCLEANFILES = Makefile.in dynusers.bash
+MAINTAINERCLEANFILES = Makefile.in dynusers_add.bash
 CLEANFILES = *~
 SUBDIRS = .
 
 presetuphookdir = $(datadir)/paludis/hooks/ebuild_setup_pre/
 
-presetuphook_SCRIPTS = dynusers.bash
+presetuphook_SCRIPTS = dynusers_add.bash
 
-EXTRA_DIST = dynusers.bash.in
+EXTRA_DIST = dynusers_add.bash.in
